New files added - [MunicipalityUsers.variables.json,MunicipalityUsers.html,MunicipalityUsers.js,MunicipalityUsers.css,MunicipalityUsers] Files modified - [leftnav.html,pages-config.json,UserCreation.js,Main.html,QueryExecutionController.java,cx2-queries.hbm.xml,Login.css,MunicipalityAdministration.variables.json,app.variables.json,Main.variables.json,Cx2QueryExecutorServiceImpl.java,UserCreation.html,servicedef.xml,Login.html,ManageGISData.html,UserCreation.variables.json,MunicipalityAdministration.html,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -6,7 +6,7 @@
                     <wm-gridrow name="gridrow7" height="15%">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn10_2"></wm-gridcolumn>
                     </wm-gridrow>
-                    <wm-gridrow name="gridrow6_1">
+                    <wm-gridrow name="gridrow6_1" class="logobg">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn10_1" horizontalalign="center" class="col-xs-12" padding="unset unset 2em unset">
                             <wm-picture name="picture1" picturesource="resources/images/imagelists/CX-Logo.png" height="6em"></wm-picture>
                         </wm-gridcolumn>
