--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -1,16 +1,16 @@
 <wm-partial data-ng-controller="leftnavPageController" name="leftnav" type="leftnav">
     <wm-nav name="DevDataEntry" type="pills" layout="stacked">
         <wm-nav-item name="list_dashboard">
-            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-bar-graph" on-click="Variables.goToPage_Main.invoke()"></wm-anchor>
+            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-bar-graph" on-click="Variables.goToPage_Main.invoke()" accessroles="User"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_order">
-            <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-windows" on-click="Variables.goToPage_MyMunicipality.invoke()"></wm-anchor>
+            <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-windows" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="User"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_inventory">
-            <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-control-point" on-click="Variables.goToPage_MunicipalityAdministration.invoke()"></wm-anchor>
+            <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-control-point" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_support">
-            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" on-click="Variables.goToPage_NewFrom.invoke()"></wm-anchor>
+            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" on-click="Variables.goToPage_NewFrom.invoke()" accessroles="User"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
             <wm-anchor name="anchor5" iconclass="wi wi-person" caption="CX Admin" on-click="Variables.goToPage_CXAdmin.invoke()" accessroles="CXAdmin"></wm-anchor>
