--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -6,10 +6,10 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid3">
                 <wm-gridrow name="gridrow17">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn29">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
                         <wm-label padding="unset 0.5em" caption="Municipality Administration" fontweight="bold" fontsize="15" name="label2"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn30">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="2em unset">
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 control-label" name="label1" caption="Select Municipality"></wm-label>
                             <wm-container class="col-md-9" name="container1">
