--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -4,7 +4,7 @@
             <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-bar-graph" on-click="Variables.goToPage_Main.invoke()" accessroles="User"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_order">
-            <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-windows" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="User"></wm-anchor>
+            <wm-anchor caption="My Municipalities" name="orderLink" iconclass="wi wi-windows" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="User" badgevalue="bind:Variables.NoOfMunicipalitiesForUser.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_inventory">
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-control-point" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin"></wm-anchor>
