New files added - [] Files modified - [leftnav.html,UserCreation.js,QueryExecutionController.java,cx2-queries.hbm.xml,MyMunicipality.html,Cx2QueryExecutorServiceImpl.java,CXAdmin.html,UserCreation.html,servicedef.xml,UserCreation.variables.json,MyMunicipality.variables.json,cx2_query.json,MunicipalityAdministration.html,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -69,7 +69,7 @@
                             <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
                                 <wm-composite name="composite2">
                                     <wm-container class="col-md-9" name="container2">
-                                        <wm-radioset height="auto" name="radioset1" dataset="Daily(recommended),Weekly,Monthly,None"></wm-radioset>
+                                        <wm-radioset height="auto" name="radiosetCF" dataset="Daily(recommended),Weekly,Monthly,None"></wm-radioset>
                                     </wm-container>
                                 </wm-composite>
                             </wm-gridcolumn>
