--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -25,14 +25,14 @@
                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn17">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
                         <wm-tile name="GISRecordsTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageGISData.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow10">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn23">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn23" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-view-list"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn24">
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="GIS Records" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.SubDivisonCount.dataSet[$i].SubDivisonCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -40,14 +40,14 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn18">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn18" horizontalalign="center" padding="2em unset">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalityUsers.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow11">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn25">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn25" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn26">
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Users" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.UserSubscriptionsCountForMunicipality.dataSet[$i].userSubscriptionsCountForMunicipality" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -55,7 +55,21 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn19"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid4">
+                                <wm-gridrow height="100%" name="gridrow8_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-bar-chart"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="title" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn11"></wm-gridcolumn>
