New files added - [ContractorApprovalsServiceImpl.java,ContractorApprovals.java,ContractorsServiceImpl.java,ContractorApprovalsService.java,ContractorApprovalsController.java,Contractors.java,ContractorsDao.java,ContractorsService.java,ContractorApprovalsDao.java,ContractorsController.java] Files modified - [Subdivisions.java,cx2_published_dataModel.json,Main.html,ManageGISData.variables.json,ManageMunicipalities.js,ManageSubscriptions.html,MunicipalitiesController.java,MunicipalityUsers.variables.json,FormTypesService.java,UsersController.java,UserCreation.html,servicedef.xml,ManageGISData.html,ManageSubscriptions.variables.json,Municipalities.java,MunicipalitiesServiceImpl.java,ManageUsers.html,ManageSubscriptions.js,FormTypesServiceImpl.java,ManageMunicipalities.variables.json,States.java,FormTypesController.java,Main.variables.json,FormTypes.java,MunicipalityUsers.html,StatesServiceImpl.java,ManageMunicipalities.html,StatesController.java,topnav.html,ManageUsers.variables.json,StatesService.java,MunicipalitiesService.java,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -65,6 +65,11 @@
                         </wm-tile>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow6">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn12"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn13"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn14"></wm-gridcolumn>
+                </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
