--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -1,8 +1,6 @@
 <wm-partial data-ng-controller="topnavPageController" name="topnav" type="topnav">
     <wm-navbar name="navbar1">
-        <wm-nav name="leftTopLinks" type="navbar" class="navbar-left">
-            <wm-nav-item name="list_services"></wm-nav-item>
-        </wm-nav>
+        <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_help">
                 <wm-anchor caption="My Cart" name="helpLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()"></wm-anchor>
